HELM: fixed interbal gray gap by removing grid from header

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -94,7 +94,7 @@ a:focus {
     all: unset;
     margin: unset;
     border-bottom: unset;
-    height: 100%;
+    height: 47px;
     padding: 0 24px;
     display: grid;
     grid-template-columns: 1fr auto;
@@ -103,6 +103,9 @@ a:focus {
     color: var(--N900);
     z-index: var(--page-header-index);
     border-bottom: 1px solid var(--N200);
+    position: sticky;
+    top: 0px;
+    overflow: visible;
 }
 
 .page-header--tabs {
@@ -1862,10 +1865,4 @@ button.anchor {
 
 input {
     background-color: var(--N50);
-}
-
-.header-body-grid-page {
-    height: 100%;
-    display: grid;
-    grid-template-rows: 47px auto;
 }
